# source-code-redis

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: adlist.c  adlist.h  debug.c  dict.c  dict.h  sds.c  sds.h
test/: CMakeLists.txt
test/framework/: test.c  test.h
test/structure/: dict_test.c  sds_test.c  sds_test.h
